@@ -1,11 +1,9 @@
 #
-# Officially supported Zulu JDK 
-#
 # For support or general questions go to:
 #
 # https://support.microsoft.com/en-us/help/4026305/sql-contact-microsoft-azure-support
 #
-FROM mcr.microsoft.com/java/jdk:8-zulu-ubuntu
+FROM mcr.microsoft.com/openjdk/jdk:11-ubuntu
 
 # Set the working directory to '/opt/spring-boot' directory
 WORKDIR /opt/spring-boot
@@ -19,7 +17,7 @@ RUN apt update && \
 EXPOSE 8080
 
 # Make Java 8 obey container resource limits, improve performance
-ENV JAVA_OPTS='-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:+UseG1GC -Djava.awt.headless=true'
+ENV JAVA_OPTS='-Djava.awt.headless=true'
 
 # Set the container up with an entrypoint so we can make sure any runtime
 # customizations happen at the appropriate time.
